--- a/rapsodiaartesanias/index.html
+++ b/rapsodiaartesanias/index.html
@@ -194,6 +194,40 @@
     <script src="js/contacto.js"></script>
     <script src="js/newUser.js"></script>
     <script src="js/catalogo.js"></script>
+
+    <!--Vamos a crear un mobile para finalizar nustra compra-->
+    <div class="mobileCompra" id="mobileCompra">
+        <div class="mobileCompra__contenido">
+            <div class="mobileCompra__header">
+                <img src="img/icons/arrow.png" alt="arrow">
+                <p class="title">Mi Carrito</p>
+            </div>
+            <div class="mobileCompra__body">
+                <div class="mobileCompra__body__contenido">
+                    <div class="mobileCompra__body__contenido__item">
+                        <img src="img/cartera_cuero1.jpg" alt="cartera">
+                        <div class="mobileCompra__body__contenido__item__info">
+                            <p>Cartera de cuero</p>
+                            <p>$2000</p>
+                        </div>
+                    </div>
+                    <div class="mobileCompra__body__contenido__item">
+                        <img src="img/libreta1.jpg" alt="libreta">
+                        <div class="mobileCompra__body__contenido__item__info">
+                            <p>Libreta de cuero</p>
+                            <p>$1000</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="mobileCompra__body__total">
+                    <p>Total: $3000</p>
+                </div>
+            </div>
+            <div class="mobileCompra__footer">
+                <a href="checkout.html" class="boton-secundario">Finalizar Compra</a>
+            </div>
+        </div>
+
 </body>
 
 </html>
