--- a/rapsodiaartesanias/listadocompras.html
+++ b/rapsodiaartesanias/listadocompras.html
@@ -90,7 +90,7 @@
 
             <p>Catriel - Rio Negro - Argentina</p>
         </div>
-        <a class="boton-secundario" href="#">Contactar</a>
+        <a class="boton-secundario" href="contacto.html">Contactar</a>
     </div>
 </section>
     <!--<img src="img/hero.jpg" alt="Hero image">-->
