--- a/rapsodiaartesanias/index.html
+++ b/rapsodiaartesanias/index.html
@@ -166,7 +166,83 @@
 
     <footer class="footer">
         <p>Rapsodia Artesanias</p>
-    </footer>
+    </footer> 
+    <script src="js/scriptsMenu.js"></script>
+    <!--Vamos a crear un mobile para finalizar nustra compra-->
+    <div class="mobileCompra" id="finalCompraModal">
+        <div class="contenedor-grl-pModal">
+            <div class="contendor-productos-Modal"></div>
+            <div class="contenedor-btn-finalizar-Compra"></div>
+        </div>
+    </div>
+
+<div class="confirmarCompra" id="confirmarCompra">
+    <div class="contenedor dos-columnas">
+
+        <form class="formulario__edit-Usuario" id="formEditUsuario">
+            <div class="campo">
+                <label class="campo__label" for="nombre">Nombre</label>
+                <input type="text" id="nombre" placeholder="Tu nombre" class="campo__field" required>
+                <span class="error-message"></span>
+            </div>
+            <div class="campo">
+                <label class="campo__label" for="email">E-mail</label>
+                <input type="email" id="email" placeholder="Tu mail" class="campo__field" required>
+                <span class="error-message"></span>
+            </div>
+            <div class="campo">
+                <label class="campo__label" for="pass">Contraseña</label>
+                <input type="password" id="pass" class="campo__field" required>
+                <span class="error-message"></span>
+            </div>
+            <div class="campo">
+                <label class="campo__label" for="telefono">Teléfono</label>
+                <input type="tel" id="telefono" placeholder="Tu Teléfono" class="campo__field" required>
+                <span class="error-message"></span>
+            </div>
+            <div class="direccion">
+                <div class="campo">
+                    <label class="campo__label dir-label" for="direccion">Dirección</label>
+                    <input type="text" id="direccion" placeholder="dirección" class="campo__field" required>
+                    <span class="error-message"></span>
+                </div>
+                <div class="campo">
+                    <label class="campo__label dir-label" for="piso">Piso</label>
+                    <input type="text" id="piso" class="campo__field">
+                </div>
+                <div class="campo">
+                    <label class="campo__label dir-label" for="cp">CP</label>
+                    <input type="text" id="cp" class="campo__field" required>
+                    <span class="error-message"></span>
+                </div>
+                <div class="campo">
+                    <label class="campo__label dir-label" for="provincia">Provincia</label>
+                    <input type="text" id="provincia" class="campo__field" required>
+                    <span class="error-message"></span>
+                </div>
+            </div>
+            <div class="campo">
+                <label class="campo__label" for="comentario">Comentario</label>
+                <textarea id="mensaje" class="campo__field campo__field--textarea"></textarea>
+            </div>
+            <div class="campo">
+                <input type="submit" value="Confirmar Compra" id="btnEditar" class="btn-form boton-secundario">
+                <input type="submit" value="Cancelar" class="btn-form btndelete boton-secundario" >
+            
+            </div>
+        </form>
+        <aside class="producto-confirmado">
+            <div class="title-contenido">
+              <p class="title">Resumen de Mi compra</p>
+            </div>
+            <div class="mi-orden-contenido-confirmado"></div>
+            </div>
+          </aside>
+    </div>
+</div>
+
+
+  
 
     <script>
         const usuario = [
@@ -183,6 +259,8 @@
             }
         ];
 
+
+
         document.getElementById('editLink').addEventListener('click', function (e) {
             e.preventDefault();
             sessionStorage.setItem('usuario', JSON.stringify(usuario[0]));
@@ -190,43 +268,12 @@
         });
     </script>
 
-    <script src="js/scriptsMenu.js"></script>
+   
     <script src="js/contacto.js"></script>
     <script src="js/newUser.js"></script>
     <script src="js/catalogo.js"></script>
 
-    <!--Vamos a crear un mobile para finalizar nustra compra-->
-    <div class="mobileCompra" id="mobileCompra">
-        <div class="mobileCompra__contenido">
-            <div class="mobileCompra__header">
-                <img src="img/icons/arrow.png" alt="arrow">
-                <p class="title">Mi Carrito</p>
-            </div>
-            <div class="mobileCompra__body">
-                <div class="mobileCompra__body__contenido">
-                    <div class="mobileCompra__body__contenido__item">
-                        <img src="img/cartera_cuero1.jpg" alt="cartera">
-                        <div class="mobileCompra__body__contenido__item__info">
-                            <p>Cartera de cuero</p>
-                            <p>$2000</p>
-                        </div>
-                    </div>
-                    <div class="mobileCompra__body__contenido__item">
-                        <img src="img/libreta1.jpg" alt="libreta">
-                        <div class="mobileCompra__body__contenido__item__info">
-                            <p>Libreta de cuero</p>
-                            <p>$1000</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="mobileCompra__body__total">
-                    <p>Total: $3000</p>
-                </div>
-            </div>
-            <div class="mobileCompra__footer">
-                <a href="checkout.html" class="boton-secundario">Finalizar Compra</a>
-            </div>
-        </div>
+
 
 </body>
 
