--- a/rapsodiaartesanias/login.html
+++ b/rapsodiaartesanias/login.html
@@ -52,8 +52,11 @@
     <footer class="footer">
         <p>Rapsodia Artesanias</p>
     </footer>
+    <script>
+
+document.addEventListener('DOMContentLoaded', function() {
+        inicializarCuenta();
+    });
+    </script>
     <script src="js/scriptsMenu.js"></script>
-    <script src="js/contacto.js"></script>
-    <script src="js/catalogo.js"></script>
 </body>
-</html>
